k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamingzone
  labels:
    name: gamingzone
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: gamingzone-dev
  labels:
    name: gamingzone-dev
    environment: development
